test/kuttl/03-cache-states/01-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: envoy1
spec:
  containers:
    - name: envoy
      image: envoyproxy/envoy:v1.14.1
      command: ["envoy"]
      args:
        [
          "-c",
          "/etc/envoy/bootstrap/config.json",
          "--component-log-level",
          "http:debug,connection:debug",
          "--service-cluster",
          "envoy1",
          "--service-node",
          "envoy1",
        ]
      ports:
        - name: http
          containerPort: 8080
          hostPort: 8080
          protocol: TCP
        - name: https
          containerPort: 8443
          hostPort: 8443
          protocol: TCP
      volumeMounts:
        - name: envoy-sidecar-bootstrap
          mountPath: /etc/envoy/bootstrap
        - name: envoy-sidecar-client-cert
          mountPath: /etc/envoy/tls/client
  volumes:
    - name: envoy-sidecar-bootstrap
      configMap:
        name: envoy-sidecar-bootstrap
    - name: envoy-sidecar-client-cert
      secret:
        secretName: envoy-sidecar-client-cert
