test/kuttl/03-cache-states/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 120

---
apiVersion: v1
kind: Pod
metadata:
  name: envoy1
status:
  phase: Running
